...
      navigate: jest.fn(),
      goBack: jest.fn(),
      setOptions: jest.fn(),
    }),
    useRoute: () => ({
      params: {
        category: 'World History',
        difficulty: 'Easy',
      },
    }),
    useIsFocused: jest.fn(() => true),
  };
});
...
