appId: com.historytime.mobile
---
- launchApp
- tapOn: 'Start Game'
- assertVisible: 'Select Category'
- back
- assertVisible: 'History Time'
